# Inference

./: .gitignore  .gitmodules  CMakeLists.txt  ParseUffNetwork.cpp  README.md  UffFasterRCNN.cpp  UffSSD.cpp  build.sh  main.cpp  resnet.cc  sampleUffFasterRCNN.cpp  uff_mnist.cpp
common/: CMakeLists.txt
common/include/: initializeMnistSampleParams.h  printHelpInfo.h
common/src/: initializeMnistSampleParams.cpp  printHelpInfo.cpp
demo/: CMakeLists.txt  inference.py  resnet50.py  run.sh  single.py  tensorrt_inference.py  trt.py  trt_inf.py
demo/include/: HelpInfo.h  MNIST_NETWORK.h  MNIST_NETWORK_Params.h  SampleMNISTAPI.h  UffFasterRcnn.h  UffNetwork.h  UffSSDParams.h  frcnnUtils.h  initializeMnistNetworkParams.h  initializeMnistSampleParams.h  initializeUffParams.h
demo/src/: HelpInfo.cpp  MNIST_NETWORK.cpp  SampleMNISTAPI.cpp  UffFasterRcnn.cpp  UffNetwork.cpp  initializeMnistNetworkParams.cpp  initializeMnistSampleParams.cpp  initializeUffParams.cpp
include/: NvInfer.h  NvInferPlugin.h  NvInferPluginUtils.h  NvInferRuntime.h  NvInferRuntimeCommon.h  NvInferVersion.h  NvOnnxParser.h  base_params.h  classifier.h  common.h
include/crt/: host_config.h
inference_trt/: CMakeLists.txt  onnx_to_engine.py  resnet.cc
inference_trt/include/: ArgsBase.h  BaseParams.h  CaffeParams.h  ONNXParams.h  UffParams.h  tools.h
inference_trt/src/: ArgsBase.cpp  BaseParams.cpp  CMakeLists.txt  CaffeParams.cpp  ONNXParams.cpp  UffParams.cpp  tools.cpp
plugin/: CMakeLists.txt
plugin/include/: clipKernel.h  customClipPlugin.h  lReluPlugin.h
plugin/src/: clipKernel.cu  customClipPlugin.cpp  lReluPlugin.cpp
python/: lenet5.py  plugin.py
python/models/: trained_lenet5.pb  trained_lenet5.uff
segmentation/: trace.json
segmentation/unet/: create_network.py  inference.py  onnx_to_plan.py  prepareData.py
src/: CMakeLists.txt  classifier.cc  getOptions.cc
tests/: CMakeLists.txt
tools/: CMakeLists.txt  data_convertor.py
tools/include/: data_find.h
tools/src/: data_find.cpp
utils/: CMakeLists.txt
utils/include/: SampleMNISTAPIParams.h  argsParser.h  half.h
utils/src/: SampleMNISTAPI.cpp  logger.cpp  sampleEngines.cpp  sampleInference.cpp  sampleOptions.cpp  sampleReporting.cpp
