include_directories(${CMAKE_SOURCE_DIR}/utils/include)
file(GLOB UTILS_SOURCE ${CMAKE_SOURCE_DIR}/utils/src/*.cpp)
#add_library(logger SHARED ${UTILS_SOURCE})
add_library(logger SHARED src/logger.cpp)
#add_library(getOptions SHARED getOptions.cpp)
#add_library(sampleEngines SHARED sampleEngines.cpp)
#add_library(sampleInference SHARED sampleInference.cpp)
#add_library(sampleOptions SHARED sampleOptions.cpp)
#add_library(sampleReporting SHARED sampleReporting.cpp)
